.scratch/user1-ossm/user1-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: user1
  namespace: istio-system
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
