.scratch/user1-ossm/v-user1-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: winmesh
  namespace: user1-windowsmesh
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  labels:
    kiali_wizard: request_routing
spec:
  host: winmesh.user1-windowsmesh.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
